[tool.poetry]
name = "rettig-books"
version = "0.1.0"
description = "Utils for handling e-book library"
authors = ["Travis Briggs <audiodude@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
